compiler/testData/diagnostics/tests/overload/ConflictingOverloadsFunsDifferentReturnInPackage.kt
// FIR_IDENTICAL
// !DIAGNOSTICS: -UNUSED_PARAMETER
package qwertyuiop

<!CONFLICTING_OVERLOADS!>fun c(s: String)<!> {
}

<!CONFLICTING_OVERLOADS!>fun c(s: String)<!> {
}
